--- a/src/app/product-row/product-row.component.html
+++ b/src/app/product-row/product-row.component.html
@@ -8,3 +8,4 @@
     <product-department [product]="product"></product-department>
   </div>
 </div>
+<price-display [price]="product?.price"></price-display>
